# contours-vectorization

./: .gitignore  CMakeLists.txt  Contour.cpp  README.md  buildings.tif  contourUtils.cpp  contourUtils.h  drawing.cpp  drawing.h  experiments.cpp  experiments.h  grid.cpp  grid.h  gridParameters.txt  iou.cpp  iou.h  main.cpp  main.h  myDP.cpp  myDP.h  parameters.cpp  parameters.h  parameters.txt  projection.cpp  projection.h  projectionParameters.txt  rotation.cpp  rotation.h  test.cpp
cn_2500_1000_500_500/params/: eps_1_interval_1_ppc_2.txt  eps_1_interval_3_ppc_3.txt  eps_2_interval_1_ppc_2.txt  eps_2_interval_3_ppc_2.txt  eps_2_interval_3_ppc_3.txt  eps_3_interval_2_ppc_2.txt  eps_3_interval_2_ppc_3.txt
cn_2700_0_500_500/: iou.txt
cn_2700_0_500_500/params/: eps_1_interval_1_ppc_3.txt  eps_1_interval_2_ppc_2.txt  eps_1_interval_3_ppc_2.txt  eps_2_interval_2_ppc_2.txt  eps_2_interval_3_ppc_2.txt  eps_3_interval_1_ppc_2.txt  eps_3_interval_3_ppc_3.txt
difficult/: markingParams.txt
difficult/params/: eps_1_interval_1_ppc_2.txt  eps_1_interval_2_ppc_2.txt  eps_1_interval_3_ppc_3.txt  eps_2_interval_1_ppc_3.txt  eps_3_interval_1_ppc_2.txt  eps_3_interval_2_ppc_2.txt
double/: iou.txt
double/params/: eps_1_interval_1_ppc_2.txt  eps_1_interval_2_ppc_3.txt  eps_2_interval_1_ppc_3.txt  eps_2_interval_3_ppc_3.txt
examples/cn_2500_1000_500_500/: iou.txt  markingParams.txt
examples/cn_2700_0_500_500/: markingParams.txt
examples/difficult/: iou.txt
examples/double/: markingParams.txt
examples/fullCn/: iou.txt  markingParams.txt
examples/netBuildings/: iou.txt
examples/netBuildings_2500_200_500_500/: iou.txt
examples/netBuildings_2700_200_500_500/: iou.txt
examples/netBuildings_3000_200_500_500/: iou.txt
examples/netBuildings_700_700_500_500/: iou.txt
examples/notClosedBuilding/: result.txt
examples/notClosedBuilding2/: result.txt
netBuildings_3000_200_500_500/: iou.txt  markingParams.txt
newDir/: .gitignore  iou.txt  time.txt
oneBuilding4/: eps_1_interval_2_ppc_2.txt  eps_1_interval_3_ppc_2.txt  eps_2_interval_1_ppc_2.txt  eps_2_interval_1_ppc_3.txt  eps_2_interval_3_ppc_3.txt
oneBuilding5/: eps_1_interval_1_ppc_2.txt  eps_1_interval_1_ppc_3.txt  eps_1_interval_2_ppc_2.txt  eps_1_interval_2_ppc_3.txt  eps_1_interval_3_ppc_2.txt  eps_1_interval_3_ppc_3.txt  eps_2_interval_1_ppc_2.txt  eps_2_interval_1_ppc_3.txt  eps_2_interval_2_ppc_2.txt  eps_2_interval_2_ppc_3.txt  eps_2_interval_3_ppc_2.txt  eps_2_interval_3_ppc_3.txt  eps_3_interval_1_ppc_2.txt  eps_3_interval_1_ppc_3.txt  eps_3_interval_2_ppc_2.txt  eps_3_interval_2_ppc_3.txt  eps_3_interval_3_ppc_2.txt  eps_3_interval_3_ppc_3.txt
satImg/: result.txt
(+302 files in other folders)
